--- a/src/scss/components/_tracker-input-modal.scss
+++ b/src/scss/components/_tracker-input-modal.scss
@@ -22,7 +22,7 @@
     flex-shrink: 1;
     align-items: center;
   }
-  .tracker-input.picker {
+  .input-model.type-picker {
     flex-direction: column;
     justify-content: flex-start;
   }
